[package]
name = "backtrace-error"
version = "0.2.0"
edition = "2021"
description = "wrap errors with automatic backtrace capture and print-on-result-unwrap"
authors = ["Graydon Hoare <graydon@pobox.com>"]
license = "MIT OR Apache-2.0"
keywords = ["error", "backtrace"]
repository = "http://github.com/graydon/backtrace-error"
readme = "README.md"
